--- a/app/client/lk-user/styles/lk-user.module.css
+++ b/app/client/lk-user/styles/lk-user.module.css
@@ -15,31 +15,31 @@
 }
 
 .content {
-  padding: 0 100px;
+  padding: 0 2.5rem;
   width: 100%;
 }
 
 @media screen and (max-width: 1000px) {
   .content {
-    padding: 0 80px;
+    padding: 0 2rem;
   }
 }
 
 @media screen and (max-width: 769px) {
-  /* .SearchCamp {
-    width: max-content;
-  } */
   .content {
-    padding: 0 60px;
+    padding: 0 1.5rem;
   }
   .label {
     margin-bottom: 1.5rem;
+  }
+  .searchCont {
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 620px) {
   .content {
-    padding: 0 40px;
+    padding: 0 1rem;
   }
   .searchContent {
     justify-content: space-between;
@@ -47,9 +47,6 @@
 }
 
 @media screen and (max-width: 520px) {
-  .content {
-    padding: 0 20px;
-  }
   .SearchCamp {
     width: max-content;
   }
