--- a/components/controls/tables/Table.module.css
+++ b/components/controls/tables/Table.module.css
@@ -1,5 +1,7 @@
-.TabName {
+.HeaderTable {
+  margin-right: 20px;
   margin-left: 30px;
+  margin-bottom: 10px;
 }
 
 .TabBlock {
@@ -7,4 +9,15 @@
   border-left: 1px solid #425a6f;
   border-bottom: 1px solid #344452;
   border-right: 1px solid #344452;
+}
+
+@media screen and (max-width: 650px) {
+  .blockCntnt {
+    gap: 1rem;
+  }
+}
+@media screen and (max-width: 1010px) {
+  .blockTitle {
+    gap: 2rem;
+  }
 }
