--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,7 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --color-gray: #64798C;
   }
 
   .dark {
@@ -58,6 +59,7 @@
     --chart-5: 340 75% 55%;
     --switcher: 145 63% 42%;
     --switch-unchecked: ;
+    --color-gray: #64798C;
   }
 }
 
